# SSID-open-core

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  AUDIT_OUTCOME_SUMMARY.md  BOUNDARY_VIOLATIONS_PHASE1.txt  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLETE_ARTIFACT_INVENTORY.md  COMPLIANCE_STATUS.md  CONTRIBUTING.md  DECISION_PACKAGE.md  DEPLOYMENT_EVIDENCE.md  EXECUTIVE_BRIEF.md  EXPORT_PIPELINE_COMPLETION_2026-04-13.md  GOVERNANCE_AUDIT_FINAL_REPORT.md  LEGAL_DISCLAIMER_VERIFICATION.md  LICENSE  LOCAL_ONLY_VERIFICATION_POLICY.md  LOCAL_VERIFICATION_QUICKSTART.md  PHASE2_GATE_VERIFICATION_COMPLETE.md  POST_APPROVAL_EXECUTION_CHECKLIST.md  PR_REVIEW_GUIDE.md  README.md  RELEASE-NOTES.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  open_core_registry.json  opencore_policy.yaml  public_export_manifest.json  public_export_policy.rego  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/: REPO_GATE_MAP.md
.github/workflows/: boundary_gate.yml  (+13 more)
01_ai_layer/: README.md  module.yaml
02_audit_logging/: README.md  module.yaml
03_core/: README.md  constants.py  consumer_simulator.py  ems_contract.py  fairness_engine.py  fee_distribution_engine.py  fee_proof_engine.py  flow_evidence.py  governance_reward_engine.py  identity_fee_router.py  license_fee_matrix.yaml  license_fee_splitter.py  manifest.yaml  module.yaml  participants.py  policy_enforcer.py  ssid_flows.py  ssid_runtime_reporter.py  subscription_revenue_distributor.py
04_deployment/: README.md  module.yaml
05_documentation/: README.md  SSID_opencore_structure_level3.md  module.yaml
06_data_pipeline/: README.md  module.yaml
07_governance_legal/: README.md  module.yaml  proof_of_fairness_policy.yaml  subscription_revenue_policy.yaml
08_identity_score/: README.md  module.yaml
09_meta_identity/: README.md  module.yaml
10_interoperability/: README.md  module.yaml
11_test_simulation/: README.md  conftest.py  module.yaml
12_tooling/: README.md  module.yaml
13_ui_layer/: README.md  module.yaml
14_zero_time_auth/: README.md  module.yaml
15_infra/: README.md  module.yaml
16_codex/: AUDIT_PHASE_1_FINAL_20260415.md  EXPORT_BOUNDARY.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  GOVERNANCE_MAINTENANCE_PROCEDURES.md  OPEN_CORE_REMOVAL_PLAN.md  OPERATIONAL_SUMMARY.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_CLEANUP_PLAN.md  PHASE_3_COMPLETION_REPORT.md  PHASE_3_EXECUTION_C_STRICT.md  PHASE_3_START_20260415.md  PHASE_3a_CLEANUP_PLAN.md  R5_COMPLETION_STATUS.md  README.md  RELEASE_GATE_POLICY.md  REMOTE_GATES_VERIFICATION.md  REMOTE_STATUS_CORRECTION.md  REMOTE_UPDATE_STATUS.md  SSID_structure_geb#U00fchren_abo_modelle.md  SSID_structure_geb#U00fchren_abo_modelle_ROOTS_16_21_ADDENDUM.md  SSID_structure_gebuehren_abo_modelle.md  SSID_structure_gebuehren_abo_modelle_ROOTS_16_21_ADDENDUM.md  SSID_structure_level3_part1_MAX.md  SSID_structure_level3_part2_MAX.md  SSID_structure_level3_part3_MAX.md  TESTNET_STATUS.md  manifest.yaml  module.yaml  opencore_export_manifest.yaml  opencore_export_policy.yaml  public_export_manifest.json  ssid_master_definition_corrected_v1.1.1.md
17_observability/: README.md  module.yaml
18_data_layer/: README.md  module.yaml
19_adapters/: README.md  module.yaml
20_foundation/: README.md  module.yaml
21_post_quantum_crypto/: README.md  module.yaml
22_datasets/: README.md  bias_test_suite.yaml  module.yaml
23_compliance/: README.md  audit_cycle.yaml  compliance_matrix_global.yaml  fee_allocation_policy.yaml  module.yaml  public_export_rules.yaml
24_meta_orchestration/: README.md  license_fee_matrix.yaml  manifest.yaml  module.yaml
public_export/: manifest.json  public_status.json
ssid_open_core_export/: ARCHITECTURE.md  COMPLIANCE.md  EXPORT_INDEX.json  EXPORT_MANIFEST.json  INTEGRATION_GUIDE.md  QUALITY_AUDIT.json  QUALITY_AUDIT.md  README.md  export.sha256.txt
ssid_open_core_export/03_core/brain_console/: __init__.py  context.py  pyproject.toml
tests/: test_opencore_policy.py
(+8913 files in other folders)
