[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ssid-open-core"
version = "0.1.0"
description = "SSID Open-Core: public libraries, SDKs, and shared types"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "E402",   # module-import-not-at-top (dynamic path setup pre-existing)
    "B008",   # function-call-in-default-argument (FastAPI Depends() pattern)
    "E741",   # ambiguous-variable-name (pre-existing, l/O/I usage)
    "N806",   # non-lowercase-variable-in-function (pre-existing naming)
    "N802",   # invalid-function-name (pre-existing naming)
    "N817",   # camelcase-imported-as-acronym (pre-existing naming)
    "SIM102", # collapsible-if (style preference, not a bug)
    "SIM105", # suppressible-exception (style preference)
    "B005",   # strip-with-multi-characters (pre-existing)
    "B017",   # assert-raises-exception (pre-existing test pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["ssid_open_core"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
