[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssid-brain-console"
version = "0.1.0"
description = "SSID Brain Console — context assembly, memory management, and evidence logging"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = []

[tool.setuptools.packages.find]
include = ["brain_console*"]

[tool.setuptools.package-dir]
brain_console = "."
